# workmate_tz

./: README.md  pyproject.toml
gen_report/: files_loader.py  parser.py  report.py
gen_report/reports/: performance.py
gen_report/scripts/: main.py
tests/: test_files_loader.py  test_main.py  test_parser.py  test_performance.py  test_report.py
