[tool.poetry]
name = "workmate script"
version = "0.1.0"
description = "Анализ эффективности работы разработчиков"
authors = ["Vladimir Silin <sva@itx24.ru>"]
readme = "README.md"
packages = [
  { include = "gen_report" },
]

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
black = "^25.11.0"
isort = "^7.0.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
report = "gen_report.scripts.main:main"